@@ -183,10 +183,10 @@ class VideoConverterTest(zeit.brightcove.testing.BrightcoveTestCase):
         video.data['customFields'].clear()
         self.assertTrue(video.commentsAllowed)
 
-    def test_dailynl_should_default_to_true(self):
+    def test_dailynl_should_default_to_false(self):
         video = Video.find_by_id('1234')
         video.data['customFields'].clear()
-        self.assertTrue(video.dailyNewsletter)
+        self.assertFalse(video.dailyNewsletter)
 
     def test_banner_should_default_to_true(self):
         video = Video.find_by_id('1234')
